# interview_problems

./: .gitignore
cpp/: CMakeLists.txt
cpp/code_interview/: CMakeLists.txt
cpp/code_interview/atoi/: atoi.cpp
cpp/code_interview/btree_next_node/: main.cpp
cpp/code_interview/heap/: heap.cpp
cpp/code_interview/list_rotate/: main.cpp
cpp/code_interview/matrix_str_path/: main.cpp
cpp/code_interview/median_of_two_sorted_arrays/: main.cpp
cpp/code_interview/min_num_of_rotation/: main.cpp
cpp/code_interview/pattern_match/: main.cpp
cpp/code_interview/qsort/: qsort.cpp
cpp/code_interview/reader_writer/: main.cpp
cpp/code_interview/robot_move_range/: main.cpp
cpp/code_interview/smart_pointer/: smart_pointer.cpp
cpp/code_interview/soduku/: soduku.cpp
cpp/code_interview/sort/: merge_sort.cpp  qsort.cpp
cpp/code_interview/thread-pool/: main.cpp
cpp/code_interview/tree_rebuild/: main.cpp
cpp/data_structure_algo/hash/: CMakeLists.txt
cpp/data_structure_algo/hash/test/: test_hash.cpp
cpp/data_structure_algo/heap/: CMakeLists.txt
cpp/data_structure_algo/heap/test/: test_heap.cpp
cpp/data_structure_algo/list/: CMakeLists.txt
cpp/data_structure_algo/list/test/: test_list.cpp
cpp/data_structure_algo/memory/: CMakeLists.txt
cpp/data_structure_algo/memory/test/: test_ptr.cpp
cpp/data_structure_algo/queue/: CMakeLists.txt
cpp/data_structure_algo/queue/test/: test_queue.cpp
cpp/data_structure_algo/set/: CMakeLists.txt
cpp/data_structure_algo/set/test/: test_set.cpp
cpp/data_structure_algo/stack/: CMakeLists.txt
cpp/data_structure_algo/tree/: CMakeLists.txt
cpp/data_structure_algo/utils/: CMakeLists.txt
cpp/data_structure_algo/vector/: CMakeLists.txt
cpp/ext/: CMakeLists.txt
python/: __main__.py
(+21 files in other folders)
